# local-develop-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  log_store.rs
crates/gh/: Cargo.toml
crates/gh/src/: lib.rs
crates/gh/tests/: gh_integration.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs  output.rs  read.rs  remote.rs  reset.rs  session.rs  write.rs
crates/git/tests/: git_integration.rs
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs  module.rs  tools.rs
crates/lds/: Cargo.toml
crates/lds/src/: cli.rs  main.rs
crates/lds/tests/: cli_recipe_dir.rs  e2e_mcp.rs
crates/recipe/: Cargo.toml
crates/recipe/src/: lib.rs
crates/recipe/tests/: recipe_integration.rs
crates/router/: Cargo.toml
crates/router/src/: client.rs  config.rs  error.rs  export.rs  lib.rs  router.rs
crates/router/tests/: export_test.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: fs.rs  lib.rs  python.rs
crates/sandbox/tests/: sandbox_integration.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
docs/: plugin-recipe-authoring.md
examples/: global-justfile.skeleton
