[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gh",
    "crates/git",
    "crates/recipe",
    "crates/sandbox",
    "crates/lds",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura"]
repository = "https://github.com/ynishi/local-develop-server"
homepage = "https://github.com/ynishi/local-develop-server"
keywords = ["mcp", "development", "agent", "git", "recipe"]
categories = ["development-tools"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.7", features = ["server", "transport-io"] }
git2 = "0.20"
schemars = "1"
thiserror = "2"
tempfile = "3"
toml = "0.8"
toml_edit = "0.22"
dirs = "5"
clap = { version = "4", features = ["derive"] }
