[package]
name = "lds-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
