[package]
name = "lds-core"
description = "Session state and configuration primitives for local-develop-server (lds)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lds-session = { path = "../session", version = "0.6.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
