[package]
name = "lds-git"
version.workspace = true
edition.workspace = true

[dependencies]
lds-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
