[package]
name = "lds-git"
description = "Git module for local-develop-server (lds) — git2-rs backed read/write with session-scoped write safety"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lds-core = { path = "../core", version = "0.6.1" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
