[package]
name = "local-develop-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lds"
path = "src/main.rs"

[dependencies]
lds-core = { path = "../core" }
lds-git = { path = "../git" }
lds-recipe = { path = "../recipe" }
lds-sandbox = { path = "../sandbox" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
schemars.workspace = true
