[package]
name = "local-develop-server"
description = "Unified MCP server for the coding pipeline — consolidates git / recipe / sandbox tooling into one process with shared session state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "lds"
path = "src/main.rs"

[dependencies]
lds-core = { path = "../core" }
lds-git = { path = "../git" }
lds-recipe = { path = "../recipe" }
lds-sandbox = { path = "../sandbox" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
schemars.workspace = true
clap.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
