[package]
name = "lds-recipe"
description = "Recipe module for local-develop-server (lds) — just CLI wrapper with dotenv-style resolve chain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lds-core = { path = "../core", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
