[package]
name = "lds-router"
description = "MCP proxy routing: subprocess-backed upstream route registry for local-develop-server (lds)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
rmcp.workspace = true

[dev-dependencies]
tempfile.workspace = true
