[package]
name = "lds-sandbox"
description = "Sandbox module for local-develop-server (lds) — file-scoped read/append with snapshot and rollback"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lds-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
