[package]
name = "lds-session"
description = "Session lifecycle primitives for local-develop-server (lds)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tempfile.workspace = true
